# mysql_test

./: .gitignore  .gitingore  CMakeLists.txt  Mysql_test.sln
Mysql_test/: Binary.cpp  Binary.h  CMakeLists.txt  DatabaseException.cpp  DatabaseException.h  IStatement.cpp  IStatement.h  Julian.cpp  Julian.h  MysqlConnect.cpp  MysqlConnect.h  MysqlPool.cpp  MysqlPool.h  Mysql_test.cpp  Mysql_test.vcxproj  Mysql_test.vcxproj.filters  Nullable.h  ParamBuffer.cpp  ParamBuffer.h  ReadMe.txt  SqlExecuteThread.cpp  SqlExecuteThread.h  Statement.cpp  Statement.h  mysqlConnect.cpp  mysqlConnect.h  stdafx.cpp
mysql-connector-c-6.1.10-macos10.12-x86_64/docs/: INFO_BIN
mysql-connector-c-6.1.10-src/cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INFO_BIN.vcxproj  INFO_BIN.vcxproj.filters  INFO_SRC.vcxproj  INFO_SRC.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  LibMySQL.sln  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  info_macros.cmake
mysql-connector-c-6.1.10-src/cmake/Docs/: INFO_BIN
mysql-connector-c-6.1.10-src/cmake/dbug/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  dbug.vcxproj  dbug.vcxproj.filters
mysql-connector-c-6.1.10-src/cmake/extra/: GenError.vcxproj  GenError.vcxproj.filters  Makefile  (+17 more)
mysql-connector-c-6.1.10-win32/include/: my_config.h
mysql-connector-c-6.1.10-win32/lib/: libmysqld.lib
mysql-connector-c-6.1.10-winx64/docs/: INFO_BIN
(+125 files in other folders)
